--- a/index.html
+++ b/index.html
@@ -1156,7 +1156,7 @@ section {
 </head>
 <!-- Sticky Navbar -->
 <header class="sticky">
-  <div class="logo">Books of I'lm</div>
+  <div class="logo">Books of 'Ilm</div>
 
   <nav>
     <ul class="menu">
@@ -1188,7 +1188,7 @@ section {
 <!-- Hero Section -->
 <section id="hero" class="hero">
   <div class="hero-content container">
-    <h1>Books of I'lm</h1>
+    <h1>Books of 'Ilm</h1>
     <p>Your free PDF library of authentic Islamic knowledge.</p>
     <a href="knowledge.html" class="btn btn-cta">See Full Library</a>
   </div>
@@ -1209,7 +1209,7 @@ section {
   <h2>Your support keeps this library free and accessible for everyone💖</h2>
   <form id="user-form" action="https://api.web3forms.com/submit" method="POST">
     <input type="hidden" name="access_key" value="87365590-ed8d-489b-9d87-6c4eea8b49b2">
-    <input type="hidden" name="from_name" value="Books of I'lm Donation">
+    <input type="hidden" name="from_name" value="Books of 'Ilm Donation">
 
     <div class="field-group">
       <input type="text" id="name" name="name" required placeholder=" " />
@@ -1276,7 +1276,7 @@ section {
         <img src="images/bank.svg" alt="Bank" />
         <h3>Bank Transfer</h3>
         <ul>
-          <li><strong>Account:</strong> Books of Ilm</li>
+          <li><strong>Account:</strong> Books of 'Ilm</li>
           <li><strong>No:</strong> 1234567890</li>
           <li><strong>IFSC:</strong> ABCD0123456</li>
           <li><strong>Bank:</strong> Your Bank Name</li>
@@ -1297,14 +1297,14 @@ section {
 
 <!-- Footer -->
 <footer class="container">
-  <p>&copy; 2025 Books of I'lm. All rights reserved.</p>
+  <p>&copy; 2025 Books of 'Ilm. All rights reserved.</p>
 </footer>
 <!-- Fullscreen Thumbnail Preview Overlay -->
 <div id="previewOverlay" class="thumbnail-modal">
   <span class="close-preview" aria-label="Close preview">×</span>
   <img src="" alt="Expanded Preview" class="preview-image" />
 </div>
-<!-- <script>
+<script>
 
   document.addEventListener("contextmenu", function(e){
     e.preventDefault();
@@ -1316,7 +1316,7 @@ section {
     }
   });
 
-</script> -->
+</script>
 
 <script>
   // ===============================
