--- a/index.html
+++ b/index.html
@@ -1272,9 +1272,9 @@ section {
         <h3>Bank Transfer</h3>
         <ul>
           <li><strong>Account:</strong> Books of 'Ilm</li>
-          <li><strong>No:</strong> 1234567890</li>
-          <li><strong>IFSC:</strong> ABCD0123456</li>
-          <li><strong>Bank:</strong> Your Bank Name</li>
+          <li><strong>No:</strong> </li>
+          <li><strong>IFSC:</strong> </li>
+          <li><strong>Bank:</strong> </li>
         </ul>
       </div>
     </div>
