--- a/knowledge.html
+++ b/knowledge.html
@@ -50,6 +50,50 @@
    Responsive Styles
 ------------------------------ */
 
+        .pagepilot-breadcrumb {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+            gap: 0.4rem;
+            font-size: 1.05rem;
+            font-weight: 500;
+            margin: 1.8rem auto;
+            padding: 0.6em 1em;
+            color: var(--primary);
+            background: var(--alt);
+            border: 1px solid var(--border);
+            border-radius: 10px;
+            width: fit-content;
+            max-width: 90%;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+            text-align: center;
+        }
+
+        .pagepilot-breadcrumb a {
+            text-decoration: none;
+            color: var(--primary);
+            transition: all 0.3s ease;
+        }
+
+        .pagepilot-breadcrumb a:hover {
+            color: var(--accent);
+            text-decoration: underline;
+            box-shadow: 0 0 8px var(--accent);
+            background: rgba(255, 255, 255, 0.03);
+            padding: 0.2em 0.4em;
+            border-radius: 6px;
+        }
+
+        .pagepilot-breadcrumb .divider {
+            color: var(--muted);
+            font-size: 1.2rem;
+        }
+
+        .pagepilot-breadcrumb span#currentContext {
+            color: var(--fg);
+            font-weight: 600;
+        }
 
 
 
@@ -399,24 +443,25 @@
                 max-width: 100%;
                 border-radius: 6px;
             }
-              .pagepilot-breadcrumb {
-    font-size: 0.95rem;
-    padding: 0.5em 0.6em;
-    gap: 0.3rem;
-    flex-direction: column;
-    align-items: flex-start;
-  }
 
-  .pagepilot-breadcrumb .divider {
-    display: none;
-  }
+            .pagepilot-breadcrumb {
+                font-size: 0.95rem;
+                padding: 0.5em 0.6em;
+                gap: 0.3rem;
+                flex-direction: column;
+                align-items: flex-start;
+            }
 
-  .pagepilot-breadcrumb a,
-  .pagepilot-breadcrumb span#currentContext {
-    display: block;
-    width: 100%;
-    margin: 2px 0;
-  }
+            .pagepilot-breadcrumb .divider {
+                display: none;
+            }
+
+            .pagepilot-breadcrumb a,
+            .pagepilot-breadcrumb span#currentContext {
+                display: block;
+                width: 100%;
+                margin: 2px 0;
+            }
         }
 
         @media (max-width: 480px) {
@@ -463,7 +508,7 @@
 </head>
 
 <body bgcolor="#EDEAE5">
-    <div id="preloader1"></div>
+    <div id="preloader"></div>
     <center>
         <div class="hbook">Some Beneficial Books</div>
     </center>
@@ -475,10 +520,10 @@
     </div>
     <br>
     <nav class="pagepilot-breadcrumb">
-  <a href="index.html">🏠 Home</a>
-  <span class="divider">›</span>
-  <a href="knowledge.html">📚 Full Library</a>
-</nav>
+        <a href="index.html">🏠 Home</a>
+        <span class="divider">›</span>
+        <a href="knowledge.html">📚 Full Library</a>
+    </nav>
 
     <div class="search-container">
         <div class="search-box" id="searchBox">
@@ -2563,23 +2608,23 @@
     </div>
 
     <script>  // Hide the preloader on window load
-        var loader = document.getElementById("preloader1");
+        var loader = document.getElementById("preloader");
         window.addEventListener("load", function () {
             loader.style.display = "none";
         });</script>
-<script>
+    <script>
 
-  document.addEventListener("contextmenu", function(e){
-    e.preventDefault();
-  });
+        document.addEventListener("contextmenu", function (e) {
+            e.preventDefault();
+        });
 
- document.addEventListener("keydown", function(e) {
-    if (e.ctrlKey && e.shiftKey && (e.key === "I" || e.key === "J" || e.key === "C") || e.key === "F12") {
-      e.preventDefault();
-    }
-  });
+        document.addEventListener("keydown", function (e) {
+            if (e.ctrlKey && e.shiftKey && (e.key === "I" || e.key === "J" || e.key === "C") || e.key === "F12") {
+                e.preventDefault();
+            }
+        });
 
-</script>
+    </script>
     <script>
         function applyThumbnailLoader(newImageURL) {
             const thumbnail = document.getElementById("pdfThumbnail");
