--- a/request.html
+++ b/request.html
@@ -8,61 +8,73 @@
     <title>Request</title>
     <link rel="shortcut icon" href="oneummah.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <style>.pagepilot-breadcrumb {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 0.4rem;
-  font-size: 1.05rem;
-  font-weight: 500;
-  margin: 1.8rem auto;
-  padding: 0.6em 1em;
-  color: var(--primary);
-  background: var(--alt);
-  border: 1px solid var(--border);
-  border-radius: 10px;
-  width: fit-content;
-  max-width: 90%;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-  text-align: center;
-}
+    <style>
+        .contact-container {
+            padding-top: 10px;
+            /* Enough room for breadcrumb float space */
+        }
 
-.pagepilot-breadcrumb a {
-  text-decoration: none;
-  color: var(--primary);
-  transition: all 0.3s ease;
-}
+        .pagepilot-breadcrumb {
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+            gap: 0.4rem;
+            font-size: 1.05rem;
+            font-weight: 500;
+            padding: 0.6em 1em;
+            color: #ffffffcc;
+            background: rgba(0, 0, 0, 0.3);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            border-radius: 10px;
+            width: fit-content;
+            max-width: 90%;
+            backdrop-filter: blur(6px);
+            box-shadow: 0 0 12px rgba(0, 255, 255, 0.3);
+            text-align: center;
+            z-index: 10;
+        }
 
-.pagepilot-breadcrumb a:hover {
-  color: var(--accent);
-  text-decoration: underline;
-  box-shadow: 0 0 8px var(--accent);
-  background: rgba(255, 255, 255, 0.03);
-  padding: 0.2em 0.4em;
-  border-radius: 6px;
-}
 
-.pagepilot-breadcrumb .divider {
-  color: var(--muted);
-  font-size: 1.2rem;
-}
+        .pagepilot-breadcrumb a {
+            text-decoration: none;
+            color: #bdefff;
+            /* soft cyan accent */
+            transition: all 0.3s ease;
+        }
 
-.pagepilot-breadcrumb span#currentContext {
-  color: var(--fg);
-  font-weight: 600;
-}
-</style>
+        .pagepilot-breadcrumb a:hover {
+            color: #ffffff;
+            background: rgba(255, 255, 255, 0.05);
+            text-decoration: underline;
+            padding: 0.2em 0.4em;
+            border-radius: 6px;
+            box-shadow: 0 0 8px rgba(255, 255, 255, 0.4);
+        }
+
+        .pagepilot-breadcrumb .divider {
+            color: #e0e0ff99;
+            /* subtle tone */
+            font-size: 1.2rem;
+        }
+
+        .pagepilot-breadcrumb span#currentContext {
+            color: #ffffffee;
+            font-weight: 600;
+        }
+    </style>
 </head>
 
 <body>
     <div id="preloader"></div>
-        <nav class="pagepilot-breadcrumb">
-  <a href="index.html">🏠 Home</a>
-  <span class="divider">›</span>
-  <a href="knowledge.html">📚 Full Library</a>
-</nav>
-
+    <nav class="pagepilot-breadcrumb">
+        <a href="index.html">🏠 Home</a>
+        <span class="divider">›</span>
+        <a href="request.html">📝 Request</a>
+    </nav>
     <center>
         <div class="contact-container">
             <form id="requestForm" action="https://api.web3forms.com/submit" method="POST" class="contact-left">
@@ -78,7 +90,7 @@
                 <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
                 <input type="email" id="email" name="email" placeholder="Your Email" class="contact-inputs" required>
                 <textarea name="message"
-                    placeholder="Requests about Islamic Books,Qur'an Recitations,New Ideas,Errors/Issues will be accepted only.[Note:- One request per day and Three requests per month]"
+                    placeholder="Requests about Islamic Books, New Ideas, Errors/Issues will be accepted only.[Note:- One request per day and Three requests per month]"
                     class="contact-inputs" required></textarea>
                 <div class="h-captcha" data-captcha="true" data-theme="dark" data-onload="myFunction"></div>
                 <button type="submit">Submit &#11085;</button>
@@ -92,7 +104,7 @@
             loader.style.display = "none";
         });
     </script>
-<script>
+    <script>
 
   document.addEventListener("contextmenu", function(e){
     e.preventDefault();
