--- a/request.html
+++ b/request.html
@@ -90,7 +90,7 @@
                 <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
                 <input type="email" id="email" name="email" placeholder="Your Email" class="contact-inputs" required>
                 <textarea name="message"
-                    placeholder="Requests about Islamic Books, New Ideas, Errors/Issues will be accepted only.[Note:- One request per day and Three requests per month]"
+                    placeholder="Genuine Conversation, Requests about Islamic Books, New Ideas, Errors / Issues will be accepted only.[Note:- One request per day and Three requests per month]"
                     class="contact-inputs" required></textarea>
                 <div class="h-captcha" data-captcha="true" data-theme="dark" data-onload="myFunction"></div>
                 <button type="submit">Submit &#11085;</button>
@@ -106,17 +106,17 @@
     </script>
     <script>
 
-  document.addEventListener("contextmenu", function(e){
-    e.preventDefault();
-  });
+        document.addEventListener("contextmenu", function (e) {
+            e.preventDefault();
+        });
 
- document.addEventListener("keydown", function(e) {
-    if (e.ctrlKey && e.shiftKey && (e.key === "I" || e.key === "J" || e.key === "C") || e.key === "F12") {
-      e.preventDefault();
-    }
-  });
+        document.addEventListener("keydown", function (e) {
+            if (e.ctrlKey && e.shiftKey && (e.key === "I" || e.key === "J" || e.key === "C") || e.key === "F12") {
+                e.preventDefault();
+            }
+        });
 
-</script>
+    </script>
     <script>
         const MAX_DAILY_SUBMISSIONS = 1;
         const MAX_MONTHLY_SUBMISSIONS = 3;
