--- a/knowledge.html
+++ b/knowledge.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Books Of Knowledge – One Ummah</title>
+    <title>Books Of 'Ilm</title>
     <meta property="og:image" content="https://lailahaillallah.netlify.app/img/op.png" />
     <meta name="description"
         content="Download authentic Islamic PDFs curated by a servant of Allah (ﷻ). Topics include Aqeedah, Hadeeth, Fiqh, and more." />
