--- a/index.html
+++ b/index.html
@@ -1171,6 +1171,43 @@
       }
     }
   </style>
+
+    <!-- Organization schema (static) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Books of 'Ilm",
+    "url": "https://booksofilm.netlify.app/",
+    "logo": "https://lailahaillallah.netlify.app/img/booksofilm.png",
+    "description": "Books Of 'Ilm built by a servant of Allah (ﷻ) is a global Islamic platform that connects Muslims through shared saheeh evidences and texts in pdf format written by Major Scholars of the Ummah",
+    "founder": {
+      "@type": "Person",
+      "name": "Zahidur Rahman",
+      "sameAs": [
+        "https://github.com/Zahwab"
+      ]
+    },
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "contactType": "Customer Support",
+      "telephone": "+91-8145557632",
+      "email": "servantofallahswt118@gmail.com",
+      "areaServed": "IN",
+      "availableLanguage": ["English", "Bengali"]
+    },
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Berhampore",
+      "addressRegion": "WB",
+      "postalCode": "742101",
+      "addressCountry": "IN"
+    },
+    "foundingDate": "2024-10-19",
+    "keywords": "Zahidur Rahman, Books of 'Ilm, global ummah, faith, spirituality, knowledge sharing, salafi, ahle hadees, manhaj as salaf, authentic hadeeth, books of knowledge"
+  }
+  </script>
+
 </head>
 
 <body>
