--- a/index.html
+++ b/index.html
@@ -6,6 +6,78 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Books of 'Ilm – For The Ummah –</title>
+  <!-- Organization schema (static) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Books of 'Ilm",
+    "url": "https://booksofilm.netlify.app/",
+    "logo": "https://lailahaillallah.netlify.app/img/booksofilm.png",
+    "description": "Books Of 'Ilm built by a servant of Allah (ﷻ) is a global Islamic platform that connects Muslims through shared saheeh evidences and texts in pdf format written by Major Scholars of the Ummah",
+    "founder": {
+      "@type": "Person",
+      "name": "Zahidur Rahman",
+      "sameAs": [
+        "https://github.com/Zahwab"
+      ]
+    },
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "contactType": "Customer Support",
+      "telephone": "+91-8145557632",
+      "email": "servantofallahswt118@gmail.com",
+      "areaServed": "IN",
+      "availableLanguage": ["English", "Bengali"]
+    },
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Berhampore",
+      "addressRegion": "WB",
+      "postalCode": "742101",
+      "addressCountry": "IN"
+    },
+    "foundingDate": "2024-10-19",
+    "keywords": "Zahidur Rahman, Books of 'Ilm, global ummah, faith, spirituality, knowledge sharing, salafi, ahle hadees, manhaj as salaf, authentic hadeeth, books of knowledge"
+  }
+  </script>
+  <script type="application/ld+json" id="ld-json"></script>
+  <script>
+    (function () {
+      fetch('public/books.json')
+        .then(res => res.json())
+        .then(books => {
+          const structuredData = {
+            "@context": "https://schema.org",
+            "@type": "ItemList",
+            "itemListElement": books.map((book, i) => {
+              // turn "the-great-gatsby" into "The Great Gatsby"
+              const displayName = book.name
+                .split('-')
+                .map(word => word.charAt(0).toUpperCase() + word.slice(1))
+                .join(' ');
+
+              return {
+                "@type": "ListItem",
+                "position": i + 1,
+                "item": {
+                  "@type": "Book",
+                  "name": displayName,
+                  "url": `${location.origin}/${encodeURIComponent(book.file)}`,
+                  "image": `${location.origin}/${encodeURIComponent(book.thumb)}`,
+                  "bookFormat": "https://schema.org/EBook",
+                  "contentSize": book.size
+                }
+              };
+            })
+          };
+
+          document.getElementById('ld-json')
+            .textContent = JSON.stringify(structuredData, null, 2);
+        })
+        .catch(err => console.error('Failed loading books.json:', err));
+    })();
+  </script>
   <style>
     /* 0. IMPORT & ROOT VARIABLES */
 
@@ -1172,41 +1244,7 @@
     }
   </style>
 
-    <!-- Organization schema (static) -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "Books of 'Ilm",
-    "url": "https://booksofilm.netlify.app/",
-    "logo": "https://lailahaillallah.netlify.app/img/booksofilm.png",
-    "description": "Books Of 'Ilm built by a servant of Allah (ﷻ) is a global Islamic platform that connects Muslims through shared saheeh evidences and texts in pdf format written by Major Scholars of the Ummah",
-    "founder": {
-      "@type": "Person",
-      "name": "Zahidur Rahman",
-      "sameAs": [
-        "https://github.com/Zahwab"
-      ]
-    },
-    "contactPoint": {
-      "@type": "ContactPoint",
-      "contactType": "Customer Support",
-      "telephone": "+91-8145557632",
-      "email": "servantofallahswt118@gmail.com",
-      "areaServed": "IN",
-      "availableLanguage": ["English", "Bengali"]
-    },
-    "address": {
-      "@type": "PostalAddress",
-      "addressLocality": "Berhampore",
-      "addressRegion": "WB",
-      "postalCode": "742101",
-      "addressCountry": "IN"
-    },
-    "foundingDate": "2024-10-19",
-    "keywords": "Zahidur Rahman, Books of 'Ilm, global ummah, faith, spirituality, knowledge sharing, salafi, ahle hadees, manhaj as salaf, authentic hadeeth, books of knowledge"
-  }
-  </script>
+
 
 </head>
 
@@ -1712,37 +1750,6 @@
       alert('Submission failed: ' + (msg || 'Unknown error'));
     }
   </script>
-  <script type="application/ld+json" id="ld-json"></script>
-
-  <script>
-    (function () {
-      fetch('public/books.json')
-        .then(res => res.json())
-        .then(books => {
-          const structuredData = {
-            "@context": "https://schema.org",
-            "@type": "ItemList",
-            "itemListElement": books.map((book, i) => ({
-              "@type": "ListItem",
-              "position": i + 1,
-              "item": {
-                "@type": "Book",
-                "name": book.name,
-                "url": `${location.origin}/${encodeURIComponent(book.file)}`,
-                "image": `${location.origin}/${encodeURIComponent(book.thumb)}`,
-                "bookFormat": "https://schema.org/EBook",
-                "contentSize": book.size
-              }
-            }))
-          };
-
-          document.getElementById('ld-json')
-            .textContent = JSON.stringify(structuredData, null, 2);
-        })
-        .catch(err => console.error('Failed loading books.json:', err));
-    })();
-  </script>
-
 
 
 </body>
