--- a/knowledge.html
+++ b/knowledge.html
@@ -1007,7 +1007,7 @@
                 class="pdf-link">Tafseer-As-Sadi-Volume-9-Juz-25-27</a><br>
             <a href="pdfs/books of knowledge/Tafseer-As-Sadi-Volume-10-Juz-28-30.pdf"
                 class="pdf-link">Tafseer-As-Sadi-Volume-10-Juz-28-30</a><br>
-            <a href="pdfs/books of knowledge/Quran_Workbook_V1.01.pdf" class="pdf-link">Quran Workbook by
+            <a href="pdfs/books of knowledge/Quran Workbook V1.01.pdf" class="pdf-link">Quran Workbook by
                 Quranic</a><br>
             <a href="pdfs/books of knowledge/The Removal of Blame From the Great Imams.pdf" class="pdf-link">The
                 Removal of
@@ -1033,7 +1033,7 @@
             <a href="pdfs/books of knowledge/Riyadis Saliheen Part 2.pdf" class="pdf-link">Riyad as Saliheen Part 2
                 by Hafiz
                 Salahuddin Yusuf</a><br>
-            <a href="pdfs/books of knowledge/Q A_Usool_Ath_Thalathah_Madrasa_Khadeejatul_Kubra_Mira_Road.pdf"
+            <a href="pdfs/books of knowledge/Q A Usool Ath Thalathah Madrasa Khadeejatul Kubra Mira Road.pdf"
                 class="pdf-link">Aqeedah Thalathatul Usool by Sheikh Muhammad bin 'Abdul Wahhab</a><br>
             <a href="pdfs/books of knowledge/Usul-As-Sunnah.pdf" class="pdf-link">Usul As Sunnah by Imām Ahmad ibn
                 Ḥanbal</a><br>
@@ -1041,9 +1041,9 @@
                 class="pdf-link">Explanation
                 of a
                 Summary of Aqeedat Hamawiyyah by Imaam Muhammad ibn Saalih al‐‘Uthaymeen</a><br>
-            <a href="pdfs/books of knowledge/Commentary_on_Kitab_At_Tawheed_Vol_1_Sh_Al_ Uthaymeen_compressed.pdf"
+            <a href="pdfs/books of knowledge/Commentary on Kitab At Tawheed Vol 1 Sh Al Uthaymeen compressed.pdf"
                 class="pdf-link">Commentary on Kitab At Tawheed Vol 1 Sheikh Al Uthaymeen</a><br>
-            <a href="pdfs/books of knowledge/Commentary_on_Kitab_At_Tawheed_Vol_2_Sh_Al_ Uthaymeen_compressed.pdf"
+            <a href="pdfs/books of knowledge/Commentary on Kitab At Tawheed Vol 2 Sh Al Uthaymeen compressed.pdf"
                 class="pdf-link">Commentary on Kitab At Tawheed Vol 2 Sheikh Al Uthaymeen</a><br>
             <a href="pdfs/books of knowledge/Kitab at-Tawheed Explained by Imām Muḥammad Ibn ‘Abdul Wahhab At Tamīmī.pdf"
                 class="pdf-link">Kitab
@@ -1056,14 +1056,14 @@
             <a href="pdfs/books of knowledge/Al Wasiyyah of Imam Ibn Qudamah al-Maqdīsī.pdf" class="pdf-link">Al
                 Wasiyyah of
                 Imam Ibn Qudamah al-Maqdīsī</a><br>
-            <a href="pdfs/books of knowledge/Commentary_on_the_Three_Fundamental.pdf" class="pdf-link">Commentary on
+            <a href="pdfs/books of knowledge/Commentary on the Three Fundamental.pdf" class="pdf-link">Commentary on
                 the
                 Three
                 Fundamental by Muhammad bin 'Abdul Wahhab</a><br>
             <a href="pdfs/books of knowledge/Sharh Kashf ash-Shubuhāt   Transcribed.pdf" class="pdf-link">Sharh Kashf
                 ash Shubuhāt
                 by Sh. Haytham Sayfaddin</a><br>
-            <a href="pdfs/books of knowledge/Towards_Understanding_Tadmuriyyah_Shaykh_Muhammad_Al_Uthaymeen.pdf"
+            <a href="pdfs/books of knowledge/Towards Understanding Tadmuriyyah Shaykh Muhammad Al Uthaymeen.pdf"
                 class="pdf-link">Towards Understanding Tadmuriyyah Shaykh Muhammad Al Uthaymeen</a><br>
 
             <a href="pdfs/books of knowledge/How To Calculate The Zakat Of Your Money.pdf" class="pdf-link">How To
