--- a/index.html
+++ b/index.html
@@ -593,8 +593,7 @@
     .card-thumbnail {
       width: 100%;
       height: 100%;
-      object-fit: cover;
-      border-radius: 8px;
+      object-fit: fill;
       transition: opacity 0.4s ease;
       position: relative;
       z-index: 1;
@@ -839,8 +838,6 @@
     }
 
     .card img {
-      max-width: 100%;
-      height: auto;
       border-radius: 8px;
       margin-bottom: 1em;
     }
@@ -1432,7 +1429,7 @@
     })
   </script>
 
-  <script>
+  <!-- <script>
 
     document.addEventListener("contextmenu", function (e) {
       e.preventDefault();
@@ -1444,7 +1441,7 @@
       }
     });
 
-  </script>
+  </script> -->
   <script>
     // ===============================
     // 1. ON-SCROLL FADE-IN OBSERVER
